# erased-generic-trait

./: .gitignore  Cargo.toml  README.md
examples/pattern/: main.rs
examples/pattern_latest/: main.rs
examples/test/: generic.rs  main.rs
src/: add_fn_table.rs  common.rs  erase_generic.rs  generate_fn_table.rs  inject_fn_table.rs  lib.rs
